--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -49,19 +49,20 @@ services:
     networks:
       - backend
 
-#  proxy:
-#    build:
-#      context: ./proxy
-#      args:
-#        APP_HOST: web
-#    image: openproject/proxy:${TAG:-14-slim}
-#    <<: *restart_policy
-#    ports:
-#      - "${PORT:-8080}:80"
-#    depends_on:
-#      - web
-#    networks:
-#      - frontend
+  proxy:
+    build:
+      context: ./proxy
+      args:
+        APP_HOST: web
+    image: openproject/proxy:${TAG:-14-slim}
+    <<: *restart_policy
+    ports:
+      - "${PORT:-8080}:80"
+    depends_on:
+      - web
+    networks:
+      - frontend
+      - app_network
 
   web:
     <<: *app
