--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -1,9 +1,6 @@
 networks:
   frontend:
   backend:
-  app_network:
-    external: true
-    name: app_network
 
 volumes:
   pgdata:
@@ -31,17 +28,17 @@ x-op-app: &app
     - "${OPDATA:-opdata}:/var/openproject/assets"
 
 services:
-#  db:
-#    image: postgres:13
-#    <<: *restart_policy
-#    stop_grace_period: "3s"
-#    volumes:
-#      - "${PGDATA:-pgdata}:/var/lib/postgresql/data"
-#    environment:
-#      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-p4ssw0rd}
-#      POSTGRES_DB: openproject
-#    networks:
-#      - backend
+  db:
+    image: postgres:13
+    <<: *restart_policy
+    stop_grace_period: "3s"
+    volumes:
+      - "${PGDATA:-pgdata}:/var/lib/postgresql/data"
+    environment:
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-p4ssw0rd}
+      POSTGRES_DB: openproject
+    networks:
+      - backend
 
   cache:
     image: memcached
@@ -51,7 +48,7 @@ services:
 
   proxy:
     build:
-      context: ./compose/proxy
+      context: ./proxy
       args:
         APP_HOST: web
     image: openproject/proxy:${TAG:-14-slim}
@@ -62,7 +59,6 @@ services:
       - web
     networks:
       - frontend
-      - app_network
 
   web:
     <<: *app
@@ -70,9 +66,8 @@ services:
     networks:
       - frontend
       - backend
-      - app_network
     depends_on:
-#      - db
+      - db
       - cache
       - seeder
     labels:
@@ -98,9 +93,8 @@ services:
     command: "./docker/prod/worker"
     networks:
       - backend
-      - app_network
     depends_on:
-#      - db
+      - db
       - cache
       - seeder
 
@@ -109,9 +103,8 @@ services:
     command: "./docker/prod/cron"
     networks:
       - backend
-      - app_network
     depends_on:
-#      - db
+      - db
       - cache
       - seeder
 
